--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
     email: false
 
 
-# Before installing, we need a never version of CMake.
+# Install dependencies
 before_install:
   #   Travis CI's CMake version is only 3.2.2.
   #   This is a workaround that upgrades to a newer version of CMake.
@@ -23,6 +23,21 @@ before_install:
   - wget https://cmake.org/files/v3.9/cmake-3.9.1-Linux-x86_64.sh
   - chmod +x cmake-3.9.1-Linux-x86_64.sh
   - ./cmake-3.9.1-Linux-x86_64.sh --prefix=$HOME/usr --exclude-subdir --skip-license
+
+  # We need a recent version of Eigen3, but this is not available through APT.
+  - mkdir /tmp/eigen && cd /tmp/eigen
+  - curl -OL "http://bitbucket.org/eigen/eigen/get/3.3.4.tar.bz2"
+  - tar --bzip2 -xf 3.3.4.tar.bz2
+  - mkdir /tmp/build-eigen && cd /tmp/build-eigen
+  - cmake . /tmp/eigen/eigen-eigen-5a0156e40feb
+  - make && sudo make install
+
+  # We need relatively recent boost libraries, and APT doesn't provide these.
+  - mkdir /tmp/boost && cd /tmp/boost
+  - curl -OL "https://dl.bintray.com/boostorg/release/1.65.1/source/boost_1_65_1.tar.bz2"
+  - cd /usr/local/
+  - sudo tar --bzip2 -xf /tmp/boost/boost_1_65_1.tar.bz2
+  - export BOOST_ROOT=/usr/local/boost_1_65_1
 
 
 # Run the build script
