--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
-# Specify the virtual environment
+# Specify the virtual environment.
 dist: trusty
 sudo: true
 
 
-# Specify the project language and the compiler to test to
+# Specify the project language and the compiler.
 language: cpp
 compiler: gcc
 
 
-# Enable Slack notifications, disable e-mail
+# Enable Slack notifications, disable e-mail.
 notifications:
     slack: gqcg:5PZ5ibXCwNU1b5ToWbHVIqnI
     email: false
 
 
-# Install dependencies
+# Before installing, we need a newer version of CMake.
 before_install:
   #   Travis CI's CMake version is only 3.2.2.
   #   This is a workaround that upgrades to a newer version of CMake.
@@ -25,6 +25,9 @@ before_install:
   - chmod +x cmake-3.9.1-Linux-x86_64.sh
   - ./cmake-3.9.1-Linux-x86_64.sh --prefix=$HOME/usr --exclude-subdir --skip-license
 
+
+# Install dependencies.
+install:
   # We need a recent version of Eigen3, but this is not available through APT.
   - mkdir /tmp/eigen && cd /tmp/eigen
   - curl -OL "http://bitbucket.org/eigen/eigen/get/3.3.4.tar.bz2"
@@ -41,7 +44,7 @@ before_install:
   - export BOOST_ROOT=/usr/local/boost_1_65_1
 
 
-# Run the build script
+# Run the build script.
 script:
   - cd /home/travis/build/GQCG/cpputil
   - mkdir build && cd build
